add html template

--- a/Client/public/css/blog-home.css
+++ b/Client/public/css/blog-home.css
@@ -5,11 +5,20 @@
  */
 
 body {
-  padding-top: 54px;
+    padding-top: 54px;
 }
 
 @media (min-width: 992px) {
-  body {
-    padding-top: 56px;
-  }
+    body {
+        padding-top: 56px;
+    }
 }
+
+.fixed-top-2 {
+    margin-top: 56px;
+}
+
+body {
+    padding-top: 105px;
+}
+
